--- a/public/css/pages/chat.styl
+++ b/public/css/pages/chat.styl
@@ -112,14 +112,15 @@
       margin-left: 10px
       margin-right: 5px
       padding: 0px
-      font-size: $font-size-base
+      font-size: 12px
+      font-weight: bold
       max-width: 50%
 
     .status
       margin: 10px
       margin-left: 0px
       padding: 0px
-      font-size: $font-size-small
+      font-size: 12px
       max-width: 75%
       float: left
       overflow: hidden
